# gbnf-nice-parser

./: .gitignore  Makefile  README.md  README.org  build.sh  dune  dune-project  dune-workspace.dev  gbnf_nice_parser.opam  gbnf_parser.opam  nice_parser.opam  report.sh  requirements.txt
.github/workflows/: main.yml
cmi/: dune__exe__Main.cmi.tmp  dune__exe__Test_gbnf_parser.cmi.tmp  dune__exe__Test_gbnf_parser2.cmi.tmp  gbnf_parser.cmi.tmp  gbnf_parser__Action.cmi.tmp  gbnf_parser__Ast.cmi.tmp  gbnf_parser__AtomicBitSet.cmi.tmp  gbnf_parser__BasicSyntax.cmi.tmp  gbnf_parser__Boolean.cmi.tmp  gbnf_parser__BoundedBitSet.cmi.tmp  gbnf_parser__CodeBits.cmi.tmp  gbnf_parser__CompletedNatWitness.cmi.tmp  gbnf_parser__Core.cmi.tmp  gbnf_parser__CoreDependencyGraph.cmi.tmp  gbnf_parser__DWordBitSet.cmi.tmp  gbnf_parser__DataFlow.cmi.tmp  gbnf_parser__Driver.cmi.tmp  gbnf_parser__Error.cmi.tmp  gbnf_parser__Fix.cmi.tmp  gbnf_parser__FixSolver.cmi.tmp  gbnf_parser__Front.cmi.tmp  gbnf_parser__GSet.cmi.tmp  gbnf_parser__Generic.cmi.tmp  gbnf_parser__Gensym.cmi.tmp  gbnf_parser__Glue.cmi.tmp  gbnf_parser__Grammar.cmi.tmp  gbnf_parser__GrammarFunctor.cmi.tmp  gbnf_parser__GraphNumbering.cmi.tmp  gbnf_parser__HashCons.cmi.tmp  gbnf_parser__IL.cmi.tmp  gbnf_parser__InfiniteArray.cmi.tmp  gbnf_parser__InputFile.cmi.tmp  gbnf_parser__Keyword.cmi.tmp  gbnf_parser__KeywordExpansion.cmi.tmp  gbnf_parser__Lexer.cmi.tmp  gbnf_parser__Lexpointfree.cmi.tmp  gbnf_parser__MArray.cmi.tmp  gbnf_parser__Memoize.cmi.tmp  gbnf_parser__Misc.cmi.tmp  gbnf_parser__NatInfinityMax.cmi.tmp  (+24 more)
dump/: profile.002395.dump  profile.02eb56.dump  profile.02f0da.dump  profile.04313b.dump  profile.045d2a.dump  profile.0706e1.dump  profile.083f01.dump  profile.08d2dd.dump  profile.097858.dump  profile.0a9733.dump  profile.0a9879.dump  profile.0ce16c.dump  profile.0d3fa8.dump  profile.10ee0f.dump  profile.112323.dump  profile.116977.dump  profile.14888e.dump  profile.14e718.dump  profile.164d43.dump  profile.168bfd.dump  profile.1840f5.dump  profile.190a42.dump  profile.19f6b6.dump  profile.1a8e7b.dump  profile.1ba552.dump  profile.1c1503.dump  profile.1d506e.dump  profile.1deb00.dump  profile.1e12c4.dump  profile.1e3339.dump  profile.2001f0.dump  profile.206dac.dump  profile.23b0b4.dump  profile.24cddd.dump  profile.24e112.dump  profile.25f2b4.dump  profile.27a209.dump  profile.28c8b5.dump  profile.28f0f2.dump  profile.28f9e6.dump  (+187 more)
dump/lib/: sentenceParser__mock.ml.pp.cmo.985cc6.dump
dump/lib/.gbnf_parser.objs/byte/: gbnf_parser__Action.cmo.03b3fc.dump  gbnf_parser__Ast.cmo.517465.dump  gbnf_parser__Ast.cmo.c31250.dump  gbnf_parser__AtomicBitSet.cmo.79d62a.dump  gbnf_parser__AtomicBitSet.cmo.f39367.dump  gbnf_parser__BasicSyntax.cmo.33db00.dump  gbnf_parser__Boolean.cmo.2a9dc6.dump  gbnf_parser__Boolean.cmo.dafc01.dump  gbnf_parser__BoundedBitSet.cmo.1f11e6.dump  gbnf_parser__BoundedBitSet.cmo.387463.dump  gbnf_parser__CodeBits.cmo.6d9320.dump  (+94 more)
example/: action.ml  dune  lexer.mll  menhir_parser.mly  move.txt  sentenceParser.mli  sentenceParserAux.ml
grammars/: README.md  arithmetic.gbnf.out  assistant.gbnf.out  c.gbnf  c.gbnf.out  charm.gbnf  charm.gbnf.out  chat.gbnf  chat.gbnf.out  chess.gbnf.out  colors.gbnf.out  commands.gbnf.out  commands_kwargs.gbnf.out  elixir.gbnf.out  elixir_no_left_recursion.gbnf.out  gallina.gbnf  gallina.gbnf.out  gallina2.gbnf  gallina2.gbnf.out  gallina3.gbnf  gen_function_calling.gbnf.out  generated_grammar.gbnf.out  grammar-3.gbnf  grammar-3.gbnf.out  grammar.gbnf.out  hazel.gbnf  hazel.gbnf.out  japanese.gbnf.out  json.gbnf  json.gbnf.out  json_arr.gbnf  json_arr.gbnf.out  json_converse.gbnf  json_converse.gbnf.out  json_func_calls_with_inner_thoughts.gbnf.out  json_only_reply.gbnf  json_only_reply.gbnf.out  list.gbnf.out  multi-tool.gbnf  multi-tool.gbnf.out  (+18 more)
lib/: Driver.ml  InputFile.ml  Makefile  action.ml  ast.ml  codeBits.ml  dune  grammarFunctor.ml  interesting.txt  lexer.ml  newRuleSyntax.ml  ollama-ocaml.org  parserAux.ml  sentenceLexer.mll  sentenceParser.automaton  sentenceParser.conflicts  sentenceParser.dot  sentenceParser.messages  sentenceParser.ml.describe  sentenceParser.mly  sentenceParser.txt  sentenceParserAux.ml  sentenceParser_describe.ml  sentenceParser_describe_ast.ml  sentence_messages.ml  syntax.ml  test.ml
lib/grammar/: calc.ml  dune  error.ml  positions.ml  sentenceLexer.mll  sentenceParser.mly  test.ml
src/: IL.ml  Makefile  basicSyntax.ml  dune  front.ml  grammar.ml  misc.ml  removed.txt
src/driver/: dune~
src/grammar/: Makefile  Makefile~  dune  dune~  test.ml
test/: Makefile  codesample.txt  dune  test.gbnf  test.org  test_gbnf_parser.ml  test_gbnf_parser2.ml
(+105 files in other folders)
