(ocamllex (modules sentenceLexer lexpointfree))
(menhir (modules sentenceParser)
 (flags --cmly
        --table
        --trace
        --dump
        --explain
        --log-grammar 99
        --log-automaton 9
        --log-code 99
        --log-grammar 99
        --reference-graph))
; (rule
;   (alias msg)
;  (targets sentence_messages.ml)
;  (deps sentenceParser.messages sentenceParser.mly)
;  (action  (with-stdout-to %{targets} (run menhir --compile-errors %{deps}))))

; # TODO FIXME:
; # menhir --list-errors ./lib/sentenceParser.mly  > lib/sentenceParser.messages

; # TODO FIXME:
; # menhir --list-errors ./lib/sentenceParser.mly  > lib/sentenceParser.messages

(library
 (name gbnf_parser)

 (libraries  batteries menhirLib))
