(ocamllex (modules sentenceLexer lexpointfree))
(menhir (modules sentenceParser)
 (flags --cmly
        --table
        --trace
        --dump
        --explain
        --log-grammar 99
        --log-automaton 9
        --log-code 99
        --log-grammar 99
        --reference-graph))
; (rule
;   (alias msg)
;  (targets sentence_messages.ml)
;  (deps sentenceParser.messages sentenceParser.mly)
;  (action  (with-stdout-to %{targets} (run menhir --compile-errors %{deps}))))

; # TODO FIXME:
; # menhir --list-errors ./lib/sentenceParser.mly  > lib/sentenceParser.messages

; # TODO FIXME:
; # menhir --list-errors ./lib/sentenceParser.mly  > lib/sentenceParser.messages

(library
 (name gbnf_parser)

 (libraries  batteries menhirLib)
 ; (preprocess
 ;   (pps
;;      graphql_ppx
      ;;      js_of_ocaml-ppx
      ; js_of_ocaml-ppx
      ; ppx_log
      ; ppx_deriving_yaml
      ; ppx_expect
      ; ppx_bench
      ; ppx_compare
      ; ppx_deriving.create
      ; ppx_deriving.enum
      ; ppx_deriving.eq
      ; ppx_deriving.fold
      ; ppx_deriving.iter
      ; ppx_deriving.ord
      ; ppx_deriving.show
      ; ppx_deriving_yojson
      ; ppx_fields_conv
      ; ppx_hash
      ; ppx_inline_test
      ; ppx_jane
      ; ppx_jsobject_conv
;      ppx_profiling
      ; ppx_protocol_conv
      ; ppx_sexp_conv
;      ppx_stage
;      ppx_tools.metaquot
;      ppx_yojson_conv
  ;    ppxlib.metaquot
 ;     profiling.ppx
      ; visitors.ppx
   ; ))
)



