;;(ocamllex (modules lexer))
(ocamllex (modules sentenceLexer))
;;(menhir (modules menhir_parser))
(menhir (modules sentenceParser)
 (flags --cmly
        --dump
        --explain
        --log-grammar 99
        --log-automaton 9
        --log-code 99
        --log-grammar 99
        --reference-graph))

(library
 (name gbnf_grammar)
  (libraries batteries)
 )

